--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "gh-user-search",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://beattyml1.github.io/gh-user-search",
   "dependencies": {
+    "babel-plugin-relay": "^1.6.0",
+    "graphql": "^0.13.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-paginate": "^5.2.3",
+    "react-relay": "^1.6.0",
     "react-scripts": "1.1.4",
-    "react-test-renderer": "^16.4.0"
+    "react-test-renderer": "^16.4.0",
+    "relay-compiler": "^1.6.0",
+    "rxjs": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "relay": "relay-compiler --src ./src --schema ./schema.graphql",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
