--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://beattyml1.github.io/gh-user-search",
   "dependencies": {
     "apollo-boost": "^0.1.7",
+    "core-js": "^2.5.7",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "react": "^16.4.0",
